--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.0.2
 django-debug-toolbar==2.1
 gunicorn==20.0.4
 idna==2.8
+openfoodfacts
 psycopg2-binary==2.8.4
 pytz==2019.3
 requests==2.22.0
