--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-debug-toolbar==2.1
 gunicorn==20.0.4
 idna==2.8
 psycopg2-binary==2.8.4
+python-dotenv==0.11.0
 pytz==2019.3
 requests==2.22.0
 sqlparse==0.3.0
